<resources>
    <string name="app_name">TEN</string>
    <string name="get_started">Get Started</string>
    <string name="main_intro">Hello future!</string>
    <string name="welcome_one_title">The Empowerment Network</string>
    <string name="welcome_one_description">Be part of 800,000 volunteers helping 8,000,000 beneficiaries get along in life</string>
    <string name="welcome_two_title">Beneficiary Base</string>
    <string name="welcome_two_description">Grow your beneficiary base as you also earn helping others grow</string>
    <string name="welcome_three_title">Monitor your network</string>
    <string name="welcome_three_description">Monitor the progress of your beneficiaries and ensure they meet targets</string>
    <string name="welcome_four_title">Give Reports</string>
    <string name="welcome_four_description">Give reports about your progress, milestones and events.</string>
    <string name="slider_skip">Skip</string>
    <string name="slider_proceed">Proceed</string>
    <string name="login">Login</string>
    <string name="login_title">Sign into your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="not_on">Not on TEN? Register</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="remember">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="social_sign">Sign in with social profiles</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="register_title_1">Create an Account</string>
    <string name="name_hint">Full Name</string>
    <string name="email_hint">Your email</string>
    <string name="start">Start</string>
    <string name="contact">Contact information</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="verification_phone">Phone verification</string>
    <string name="finish">Finish</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retry">RESEND CODE</string>
    <string name="account_password">Account Password</string>
    <string name="passformat">Password must contain 1 Alphabet, 1 number, 1 special character and the minimum of 8 characters.</string>
    <string name="already">Already a member? Sign In</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_beneficiaries">Beneficiaries</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_chat">Support</string>
    <string name="title_logout">Logout</string>
    <string name="title_group">Groups</string>
    <string name="title_activity_drawer_activity">DrawerACtivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_profile">MainProfile</string>
    <string name="title_activity_testing">Testing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_the_profile">TheProfile</string>
    <string name="title_activity_the_main_profile">TheMainProfile</string>
    <string name="title_activity_profile">Profile</string>

    <string name="profileStats">Profile overview</string>
    <string name="regStatus">Registration status</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="activitylatest">Recent activities</string>

    <string name="dashboard">Dashboard</string>
    <string name="groups">Groups</string>
    <string name="add_group">Add Group</string>
    <string name="add_beneficiaries">Add Beneficiaries</string>
    <string name="add_new_group">Add new group</string>
    <string name="enter_your_group_description">Enter your group description</string>
    <string name="submit">Submit</string>
    <string name="groupCreated">Your group has been created successfully.</string>
    <string name="no_group">No groups found?</string>
    <string name="no_group_desc">Try to add more groups to your account by clicking the button below then come back here to view your groups.</string>
    <string name="new_group">New group</string>
    <string name="group_overview">Group overview</string>

    <string name="member_reg">Members registered</string>
    <string name="your_members">Group members</string>
    <string name="add_new_member">Add new member</string>
    <string name="upload_photo">UPLOAD PASSPORT</string>
    <string name="name">Name</string>
    <string name="email">Email address</string>
    <string name="national_id">UPLOAD ID (NATIONAL)</string>
    <string name="bank_name">Bank name</string>
    <string name="bank_number">Account number</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nationality">Nationality</string>
    <string name="soo">State of origin</string>
    <string name="sor">State of residence</string>
    <string name="lg">Local government area</string>
    <string name="bvn">Bank verification number</string>
    <string name="profile_details">Profile details</string>
    <string name="kids">Kids</string>
    <string name="mstatus">Marital status</string>
    <string name="group_name">Group name</string>
    <string name="date_added">Date added</string>
    <string name="allBeneficiaries">All beneficiaries</string>
    <string name="view_group">Viewing group</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="balance">Balance</string>
    <string name="paid">Paid</string>
    <string name="wallet">Wallet</string>
    <string name="transaction">All transactions</string>
    <string name="activity">Activities</string>


    <string name="facebook_app_id">767087120379072</string>
    <string name="fb_login_protocol_scheme">fb767087120379072</string>

    <string name="all_notifications">All Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string-array name="gender">
        <item>Select your gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Not sure</item>
    </string-array>
    <string-array name="employment_status">
        <item>Employment status</item>
        <item>Student</item>
        <item>Unemployed</item>
        <item>Private sector</item>
        <item>Public sector</item>
        <item>Self-employed</item>
    </string-array>
    <string-array name="marital_status">
        <item>Marital status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Widowed</item>
        <item>Engaged</item>
        <item>Divorced</item>
    </string-array>
    <string-array name="kids_number">
        <item>Number of children</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>

    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="pin_stead">Login with pin</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="login_now">Already registered? Login</string>
    <string name="register_now">Don\'t have an account yet? Sign Up</string>
    <string name="ben_search">Type to search your beneficiaries</string>

    <string name="title_call">Call</string>
    <string name="title_view">View</string>
    <string name="title_add_beneficiaries">Add Beneficiaries</string>
    <string name="title_add_group">Add Group</string>

    <string name="no_members">No members found?</string>
    <string name="no_members_found">No members could be found on your account. Please click the button below to add beneficiary now.</string>
</resources>

