<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_ten_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/nav_beneficiaries"
        android:icon="@drawable/ic_ten_beneficiariaries"
        android:title="@string/title_beneficiaries" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_ten_group"
        android:title="@string/title_group" />

    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/ic_ten_wallet"
        android:title="@string/title_wallet" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_ten_support"
        android:title="@string/title_chat" />

</menu>
