<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorButtonText"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="@drawable/register_bg_line"
            android:paddingTop="20dp"
            android:layout_marginBottom="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorHeadings"
                android:layout_marginTop="10dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/edittext_register"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_email"
                android:fontFamily="@font/poppins_light"
                android:textSize="13sp"
                android:textColor="@color/colorBlackSmall"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/edittext_register"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_password"
                android:fontFamily="@font/poppins_light"
                android:textSize="13sp"
                android:textColor="@color/colorBlackSmall"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:background="@drawable/register_btn"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorButtonText"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password? Reset now"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/smallText"
                android:fontFamily="@font/rubik_light"
                android:layout_marginTop="20dp"
                android:paddingBottom="40dp"
                android:paddingTop="5dp"/>
        </LinearLayout>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>