<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/register_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:id="@+id/already"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorButtonText"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="@drawable/register_bg_line"
            android:paddingTop="20dp"
            android:layout_marginBottom="40dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title_1"
                android:layout_gravity="center"
                android:textSize="17sp"
                android:textColor="@color/colorHeadings"
                android:fontFamily="@font/poppins_regular"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/edittext_register"
                android:layout_marginTop="15dp"
                android:hint="@string/name_hint"
                android:fontFamily="@font/poppins_light"
                android:textSize="13sp"
                android:textColor="@color/colorBlackSmall"
                android:id="@+id/name"
                android:inputType="textPersonName"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/edittext_register"
                android:layout_marginTop="15dp"
                android:hint="@string/email_hint"
                android:fontFamily="@font/poppins_light"
                android:textSize="13sp"
                android:textColor="@color/colorBlackSmall"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>
            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:background="@drawable/register_btn"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorButtonText"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:background="#fe4d97"
                    android:layout_columnWeight="0.5"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:background="#f2f4f6"
                    android:layout_columnWeight="1.5"
                    />
            </GridLayout>
        </LinearLayout>
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>