<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BeneficiariesFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:columnCount="2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:id="@+id/groups"
            android:background="@drawable/task_overview_bg"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/groups"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups"
                android:textColor="@color/smallText"
                android:fontFamily="@font/rubik_bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:id="@+id/beneficiaries"
            android:background="@drawable/task_overview_bg"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/beneficiaries"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beneficiaries"
                android:textColor="@color/smallText"
                android:fontFamily="@font/rubik_bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:id="@+id/addGroup"
            android:background="@drawable/task_overview_bg"
            android:padding="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/add_beneficiary"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_group"
                android:textColor="@color/smallText"
                android:fontFamily="@font/rubik_bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:id="@+id/addBeneficiaries"
            android:background="@drawable/task_overview_bg"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/add_ben"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_beneficiaries"
                android:textColor="@color/smallText"
                android:fontFamily="@font/rubik_bold"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"/>
        </LinearLayout>
    </GridLayout>
</LinearLayout>